--- a/.github/workflows/actions/stew-ci/action.yml
+++ b/.github/workflows/actions/stew-ci/action.yml
@@ -1,5 +1,5 @@
-name: pyproject ci
-description: Launch pyproject ci on a project
+name: stew ci
+description: Launch stew ci on a project
 
 inputs:
   project-name:
@@ -15,7 +15,7 @@ runs:
       shell: bash
       run: python -m pip install --upgrade pip wheel setuptools poetry==1.1.6 --user --no-warn-script-location
 
-    - name: Run pyproject ci
+    - name: Run stew ci
       shell: bash
       working-directory: coveo-stew
       run: |
