--- a/.github/workflows/coveo-pypi-cli.yml
+++ b/.github/workflows/coveo-pypi-cli.yml
@@ -34,8 +34,8 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Run pyproject ci
-        uses: ./.github/workflows/actions/pyproject-ci
+      - name: Run stew ci
+        uses: ./.github/workflows/actions/stew-ci
         with:
           project-name: ${{ github.workflow }}
 
