--- a/.github/workflows/actions/publish-to-pypi/action.yml
+++ b/.github/workflows/actions/publish-to-pypi/action.yml
@@ -29,29 +29,34 @@ runs:
       working-directory: ${{ inputs.project-name }}
       run: echo "::set-output name=minimum-version::$(${{ github.action_path }}/get-minimum-version.sh)"
 
-    - name: Determine the prerelease flag for this release.
-      shell: bash
-      id: get-prerelease-flag
-      run: |
-        if [[ ${{ inputs.pre-release }} == true ]]; then
-          echo "::set-output name=pre-release::--prerelease"
-        fi
-
-    - name: Obtain the next version
-      id: get-next-version
+    - name: Compute the release and prerelease versions
+      id: get-versions
       shell: bash
       working-directory: coveo-pypi-cli
       run: |
         python -m poetry install
-        NEXT_VERSION="$(python -m poetry run pypi next-version ${{ inputs.project-name }} --minimum-version ${{ steps.get-minimum-version.outputs.minimum-version }} ${{ steps.get-prerelease-flag.outputs.pre-release }})"
-        echo "::set-output name=next-version::$NEXT_VERSION"
-        echo "Next release's version: $NEXT_VERSION"
+        PRERELEASE="$(python -m poetry run pypi next-version ${{ inputs.project-name }} --prerelease --minimum-version ${{ steps.get-minimum-version.outputs.minimum-version }})"
+        RELEASE="$(python -m poetry run pypi next-version ${{ inputs.project-name }} --minimum-version ${{ steps.get-minimum-version.outputs.minimum-version }})"
+        echo "::set-output name=prerelease::$PRERELEASE"
+        echo "::set-output name=release::RELEASE"
+        echo "Next release: $RELEASE"
+        echo "Next prerelease: $PRERELEASE"
+
+    - name: Determine the version to publish.
+      shell: bash
+      id: get-next-version
+      run: |
+        if [[ ${{ inputs.pre-release }} == true ]]; then
+          echo "::set-output name=version::${{ steps.get-versions.outputs.prerelease }}"
+        else
+          echo "::set-output name=version::${{ steps.get-versions.outputs.release }}"
+        fi
 
     - name: Setup poetry for publish
       shell: bash
       working-directory: ${{ inputs.project-name }}
       run: |
-        python -m poetry version ${{ steps.get-next-version.outputs.next-version }}
+        python -m poetry version ${{ steps.get-next-version.outputs.version }}
         python -m poetry build
         python -m poetry config pypi-token.pypi ${{ inputs.pypi-token }}
 
@@ -69,7 +74,7 @@ runs:
       shell: bash
       id: get-next-tag
       run: |
-        TAG_NAME=${{ inputs.project-name }}.${{ steps.get-next-version.outputs.next-version }}
+        TAG_NAME=${{ inputs.project-name }}.${{ steps.get-next-version.outputs.version }}
         echo "::set-output name=tag-name::$TAG_NAME"
         echo "This release will be tagged as $TAG_NAME"
         git config user.name "github-actions"
