--- a/coveo-stew/pyproject.toml
+++ b/coveo-stew/pyproject.toml
@@ -14,7 +14,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.8"
-black = { version = "21.6b0", allow-prereleases = true }
+black = { version = ">=22.1" }
 click = "*"
 coveo-functools = { version = "^2.0.0" }
 coveo-itertools = { version = "^2.0.0" }
