--- a/coveo-pypi-cli/pyproject.toml
+++ b/coveo-pypi-cli/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "coveo-pypi-cli"
-version = "2.0.0"
+version = "2.1.0"
 description = "Query and compute pypi versions from command line."
 license = "Apache-2.0"
 readme = "README.md"
@@ -8,7 +8,7 @@ repository = "https://github.com/coveooss/coveo-python-oss/tree/main/coveo-pypi-
 authors = ["Jonathan Piché <tools@coveo.com>"]
 
 [tool.poetry.dependencies]
-python = ">=3.8"
+python = ">=3.8,<4"
 
 click = "*"
 coveo-settings = { version = "^2.0.0" }
