--- a/coveo-stew/pyproject.toml
+++ b/coveo-stew/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "coveo-stew"
-version = "2.1.0"
+version = "2.2.0"
 description = "Opinionated python packaging and development utilities"
 license = "Apache-2.0"
 readme = "README.md"
@@ -13,16 +13,16 @@ packages = [
 
 
 [tool.poetry.dependencies]
-python = ">=3.8"
-black = { version = "21.6b0", allow-prereleases = true }
+python = ">=3.8,<4"
+black = "22.3"
 click = "*"
-coveo-functools = { version = "^2.0.0" }
-coveo-itertools = { version = "^2.0.0" }
-coveo-systools = { version = "^2.0.0" }
-coveo-styles = { version = "^2.0.0" }
+coveo-functools = "^2.0.0"
+coveo-itertools = "^2.0.0"
+coveo-systools = "^2.0.0"
+coveo-styles = "^2.0.0"
 junit-xml = "*"
-mypy = "0.812"
-poetry = "^1.1.4"
+mypy = "0.950"
+poetry = "^1.1.13"
 toml = "*"
 typing_extensions = "*"
 
