--- a/.github/workflows/coveo-functools.yml
+++ b/.github/workflows/coveo-functools.yml
@@ -27,8 +27,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.8, 3.9]
-        os: [ubuntu-20.04, windows-2019, macos-10.15]
+        python-version: [3.8, 3.9, 3.10]
+        os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
       - name: Checkout repository
