--- a/.github/workflows/coveo-testing-extras.yml
+++ b/.github/workflows/coveo-testing-extras.yml
@@ -29,7 +29,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.8, 3.9]
-        os: [ubuntu-20.04, windows-2019, macos-10.15]
+        os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
       - name: Checkout repository
