--- a/coveo-stew/pyproject.toml
+++ b/coveo-stew/pyproject.toml
@@ -21,7 +21,7 @@ coveo-itertools = "^2.0.0"
 coveo-systools = "^2.0.0"
 coveo-styles = "^2.0.0"
 junit-xml = "*"
-mypy = "0.812"
+mypy = "0.950"  # required for 3.10 support
 poetry = "^1.1.13"
 toml = "*"
 typing_extensions = "*"
