--- a/coveo-stew/test_coveo_stew/pyprojet_mock/mock-pyproject-dependency/mock.pyproject.toml
+++ b/coveo-stew/test_coveo_stew/pyprojet_mock/mock-pyproject-dependency/mock.pyproject.toml
@@ -6,18 +6,18 @@ authors = ["Jonathan piché <tools@coveo.com>"]
 
 
 [tool.poetry.dependencies]
-python = ">=3.6"
+python = ">=3.8"
 
-black = { version = "*", allow-prereleases = true }
+black = "*"
 
-# at time of writing, 2.24 was used. we use 2.20 to ensure we don't get the latest.
-requests = "<=2.20"
+# at time of writing, 2.27 was used. we use 2.26 to ensure we don't get the latest.
+requests = "<=2.26"
 
 
 [tool.stew.build-dependencies]
-setuptools-scm = { version = "*" }  # required by black's setup
+setuptools-scm = "*"
 
 
 [build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry_core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
