--- a/coveo-stew/test_coveo_stew/pyprojet_mock/mock-pyproject/mock.pyproject.toml
+++ b/coveo-stew/test_coveo_stew/pyprojet_mock/mock-pyproject/mock.pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Jonathan piché <tools@coveo.com>"]
 
 
 [tool.poetry.dependencies]
-python = ">=3.6"
+python = ">=3.8"
 mock-pyproject-dependency = "*"
 requests = "*"
 
@@ -30,5 +30,5 @@ wheel = "*"
 
 
 [build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry_core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
