--- a/coveo-stew/pyproject.toml
+++ b/coveo-stew/pyproject.toml
@@ -50,7 +50,7 @@ black = true
 
 
 [tool.stew.ci.custom-runners]
-flake8 = { args = ["--ignore=E501,W503"]}
+flake8 = { check-args = "--ignore=E501,W503" }
 
 
 [tool.black]
