--- a/.github/workflows/actions/stew-ci/action.yml
+++ b/.github/workflows/actions/stew-ci/action.yml
@@ -13,11 +13,9 @@ runs:
   steps:
     - name: Setup/upgrade the python tools
       shell: bash
-      run: python -m pip install --upgrade pip wheel setuptools poetry==1.1.13 --user --no-warn-script-location
+      run: python -m pip install --upgrade pip wheel setuptools poetry==1.1.13 coveo-stew==3.0.0a4 --user --no-warn-script-location
 
     - name: Run stew ci
       shell: bash
-      working-directory: coveo-stew
       run: |
-        python -m poetry install
-        python -m poetry run stew ci ${{ inputs.project-name }} --exact-match
+        python -m coveo_stew ci ${{ inputs.project-name }} --exact-match
