--- a/.github/workflows/actions/stew-ci/action.yml
+++ b/.github/workflows/actions/stew-ci/action.yml
@@ -13,7 +13,7 @@ runs:
   steps:
     - name: Setup/upgrade the python tools
       shell: bash
-      run: python -m pip install --upgrade pip wheel setuptools poetry==1.1.13 coveo-stew==3.0.0a5 --user --no-warn-script-location
+      run: pipx install poetry==1.1.13 coveo-stew==3.0.0a5
 
     - name: Run stew ci
       shell: bash
