--- a/.github/workflows/actions/stew-ci/action.yml
+++ b/.github/workflows/actions/stew-ci/action.yml
@@ -13,9 +13,10 @@ runs:
   steps:
     - name: Setup/upgrade the python tools
       shell: bash
-      run: pipx install poetry==1.1.13 coveo-stew==3.0.0a5
+      run: |
+        pipx install poetry==1.1.13
+        pipx install coveo-stew==3.0.0a5
 
     - name: Run stew ci
       shell: bash
-      run: |
-        python -m coveo_stew ci ${{ inputs.project-name }} --exact-match
+      run: stew ci ${{ inputs.project-name }} --exact-match
