--- a/.github/workflows/actions/stew-ci/action.yml
+++ b/.github/workflows/actions/stew-ci/action.yml
@@ -14,25 +14,20 @@ runs:
   using: 'composite'
 
   steps:
+    - name: Setup/upgrade the python tools
+      shell: bash
+      run: | 
+        pipx install poetry==1.1.13 
+        pipx install coveo-stew==3.0.0a5
+
     - uses: actions/setup-python@v3
       with:
         python-version: ${{ inputs.python-version }}
         cache: poetry
 
-    - name: Prepare pipx path
-      shell: bash
-      run: echo "$HOME/.local/bin" >> $GITHUB_PATH
-
-    - name: Upgrade pip and friends
-      shell: bash
-      run: python -m pip install --upgrade pip wheel setuptools pipx
-
-    - name: Install poetry and stew
-      shell: bash
-      run: |
-        python -m pipx install poetry==1.1.13
-        python -m pipx install coveo-stew==3.0.0a5
+    - name: Ensure correct python version
+      run: poetry env use ${{ inputs.python-version }}
 
     - name: Run stew ci
       shell: bash
-      run: python -m coveo_stew ci ${{ inputs.project-name }} --exact-match
+      run: stew ci ${{ inputs.project-name }} --exact-match
