--- a/.github/workflows/actions/stew-ci/action.yml
+++ b/.github/workflows/actions/stew-ci/action.yml
@@ -14,20 +14,28 @@ runs:
   using: 'composite'
 
   steps:
-    - uses: actions/setup-python@v3
+    - uses: actions/setup-python
       with:
         python-version: ${{ inputs.python-version }}
 
-    - name: Setup/upgrade the python tools
+    - name: Prepare pipx path
+      shell: bash
+      run: echo "$HOME/.local/bin" >> $GITHUB_PATH
+
+    - name: Upgrade python tools and install pipx
+      shell: bash
+      run: python -m pip install --upgrade pip wheel setuptools pipx --user
+
+    - name: poetry and stew
       shell: bash
       run: | 
-        pipx install poetry==1.1.13 
-        pipx install coveo-stew==3.0.0a5
+        python -m pipx install poetry==1.1.13
+        python -m pipx install coveo-stew==3.0.0a5
 
     - name: Ensure correct python version
       shell: bash
       working-directory: ${{ inputs.project-name }}
-      run: poetry env use python${{ inputs.python-version }}
+      run: poetry env use python
 
     - name: Run stew ci
       shell: bash
