--- a/.github/workflows/actions/stew-ci/action.yml
+++ b/.github/workflows/actions/stew-ci/action.yml
@@ -14,7 +14,7 @@ runs:
   using: 'composite'
 
   steps:
-    - uses: actions/setup-python
+    - uses: actions/setup-python@v4
       with:
         python-version: ${{ inputs.python-version }}
 
