--- a/coveo-styles/pyproject.toml
+++ b/coveo-styles/pyproject.toml
@@ -11,7 +11,7 @@ authors = ["Jonathan Piché <tools@coveo.com>"]
 python = ">=3.8"
 
 click = ">=8.1"
-emoji = "^1.7.0"
+emoji = ">=2"
 typing_extensions = "*"
 
 
