--- a/.github/workflows/actions/publish-to-pypi/action.yml
+++ b/.github/workflows/actions/publish-to-pypi/action.yml
@@ -21,7 +21,7 @@ runs:
   steps:
     - name: Setup/upgrade the python tools
       shell: bash
-      run: python -m pip install --upgrade pip wheel setuptools poetry==1.1.13 --user
+      run: python -m pip install --upgrade pip wheel setuptools "poetry<1.4" --user
 
     - name: Determine the minimum version for this release (the one in the pyproject.toml file)
       shell: bash
